# filenest

./: README.md  buildinstaller.js  config.js  config.json  index.html  main.js  manager.js  package-lock.json  package.json  pnpm-lock.yaml  settings.css  settings.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: main.rs
